--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <div id="paddle"></div>
         </div>
         <div id="game-ui">
+            <div id="version">Version: <span id="version-value">0.0.0</span></div>
+            
             <div id="score">Score: <span id="score-value">0</span></div>
             <div id="lives">Lives: <span id="lives-value">3</span></div>
             <div id="level">Level: <span id="level-value">1</span></div>
